--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -1,9 +1,9 @@
 name: Build Windows EXE
 
 on:
-  workflow_dispatch:   # lets you trigger manually in GitHub
+  workflow_dispatch:   # Allows manual trigger in GitHub UI
   push:
-    branches: [ main ] # builds whenever you push to main
+    branches: [ main ] # Triggers on push to the main branch
 
 jobs:
   build:
@@ -18,19 +18,4 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pyinstaller
-
-      - name: Build executable
-        run: |
-          pyinstaller --onefile app.py
-          dir dist
-
-      - name: Upload EXE as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: occupation-similarity-app
-          path: dist/app.exe
+      - name: In
