--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -1,9 +1,9 @@
 name: Build Windows EXE
 
 on:
-  workflow_dispatch:   # Allows manual trigger in GitHub UI
+  workflow_dispatch:
   push:
-    branches: [ main ] # Triggers on push to the main branch
+    branches: [ main ]
 
 jobs:
   build:
@@ -18,4 +18,19 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: In
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Build executable
+        run: |
+          pyinstaller --onefile app.py
+          dir dist
+
+      - name: Upload EXE as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: occupation-similarity-app
+          path: dist/app.exe
