--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: occupation-similarity-app
-          path: dist/app.exe
+          path: dist/*.exe
