--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit>=1.30
-pandas>=2.1
+streamlit>=1.24.0
+pandas>=2.0
+numpy>=1.27
 altair>=5.0
-matplotlib>=3.7
-seaborn>=0.12
-networkx>=3.1
-pyvis>=0.3
 openpyxl>=3.1
